<resources>
    <string name="app_name">InClass04</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="namefield_hint">Name</string>
    <string name="passwordfield_hint">Password</string>
    <string name="emailfield_hint">Email</string>
    <string name="login_label">Login</string>
    <string name="createNewAccount_label">Create New Account</string>
    <string name="submit_label">Submit</string>
    <string name="cancel_label">Cancel</string>
    <string name="welcome_label">Welcome !!!</string>
    <string name="edit_profile_label">Edit Profile</string>
    <string name="log_out_label">Log Out</string>
    <string name="register_account_label">Register Account</string>
    <string name="account_label">Account</string>
    <string name="login_title_label">Login</string>
    <string name="update_account_label">Update Account</string>
    <string name="toast_mandatory">All fields are mandatory</string>
    <string name="toast_invalid">Invalid Credentials</string>
    <string name="toast_existing_email">Email id already exists</string>
</resources>